# job-match

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: .env_example  requirements.txt  run_server.py
src/app/: email.py  main.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: ads.py  companies.py  login.py  professionals.py  users.py  utils.py
src/app/core/: auth.py  config.py  hashing.py  security.py
src/app/crud/: crud_ad.py  crud_company.py  crud_professional.py  crud_user.py
src/app/db/: database.py  models.py
src/app/schemas/: ad.py  ads.py  company.py  professional.py  requirement.py  salary_range.py  user.py
src/app/templates/: verification.html
tests/: conftest.py
tests/ db/database/: database_test.py
tests/api/api_v1/endpoints/: ad_test.py  companies_test.py  login_test.py  professionals_test.py  users_test.py  utils_test.py
tests/api_v1/endpoints/: users_tests.py
tests/core/: auth_test.py  email_test.py  hashing_test.py  security_test.py
tests/crud/: crud_ad_test.py  crud_company_test.py  crud_professional_test.py  crud_user_test.py
tests/db/database/: database_test.py
